tests/baselines/reference/parserComputedPropertyName36.errors.txt
parserComputedPropertyName36.ts(2,6): error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
parserComputedPropertyName36.ts(2,6): error TS2304: Cannot find name 'public'.


==== parserComputedPropertyName36.ts (2 errors) ====
    class C {
        [public ]: string;
         ~~~~~~
!!! error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    }